--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ django-phonenumber-field==8.0.0
 pillow==10.4.0
 djangorestframework==3.15.2
 phonenumbers==8.13.45
+environs==11.0.0
+telebot==0.0.5
